# tavily-cookbook

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: deploy.yml  publish.yml  test.yml
agent-toolkit/: CHANGELOG.md  README.MD  __init__.py  pyproject.toml  requirements.txt
agent-toolkit/agents/: README.MD  __init__.py  hybrid_researcher.py
agent-toolkit/evals/: README.md  __init__.py  content-attribution.ipynb  custom-dataset-eval.ipynb  grounding-eval.ipynb  models.py  search-quality.ipynb
agent-toolkit/evals/datasets/: __init__.py  base.py  csv_dataset.py
agent-toolkit/evals/evaluators/: __init__.py  base.py  dataset_evaluator.py  research_evaluator.py  retrieval_evaluator.py
agent-toolkit/evals/judges/: __init__.py  base.py  correctness_judge.py  grounding_judge.py  quality_judge.py  relevance_judge.py
agent-toolkit/evals/metrics/: __init__.py  content_attribution.py  correctness.py  grounding.py  relevance.py  search_quality.py
agent-toolkit/tests/: conftest.py  test_async_search_and_dedup.py  test_clean_web_content.py  test_crawl_and_summarize.py  test_evals.py  test_extract_and_summarize.py  test_hybrid_research_integration.py  test_search_and_answer.py  test_search_and_format.py  test_social_media.py
agent-toolkit/tools/: README.md  __init__.py  async_search_and_dedup.py  crawl_and_summarize.py  extract_and_summarize.py  search_and_answer.py  search_and_format.py  social_media.py
agent-toolkit/use-cases/: readme.md
agent-toolkit/use-cases/claude_sdk/: chatbot.py  company_intelligence_deep_agent.py  requirements.txt
agent-toolkit/use-cases/langgraph/: chatbot.py  company_intelligence_deep_agent.py  requirements.txt
agent-toolkit/use-cases/quickstart-notebooks/: reddit_company_sentiment.ipynb
agent-toolkit/utilities/: README.md  utils.py
cookbook/: README.md
cookbook/mcp/: remote-mcp.ipynb
cookbook/research/: clarification.ipynb
cookbooks/: CLAUDE.MD  README.md
cookbooks/integrations/aws-strands/interactive_cli/: pyproject.toml
crawl/: agent_grounding.ipynb  getting_started.ipynb
getting-started/: hybrid-agent-tutorial.ipynb  search-extract-crawl.ipynb
research/: clarification.ipynb  hybrid_research.ipynb  mcp.ipynb  polling.ipynb  streaming.ipynb  structured_output.ipynb
research-toolkit/: README.MD  models.py
solution-patterns/: README.MD  requirements.txt
use-cases/: chatbot.py  company_intelligence_deep_agent.py  readme.md  requirements.txt  social_media_research.py  utils.py
(+64 files in other folders)
