[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tavily-agent-toolkit"
version = "0.1.0"
description = "A collection of tools and agents for building AI applications with Tavily"
readme = "README.MD"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Tavily", email = "support@tavily.com"}
]
keywords = ["tavily", "ai", "agents", "tools", "search", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tavily-python>=0.7.17",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "httpx>=0.25.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    # Security: pinned minimum versions for transitive dependencies
    "urllib3>=2.6.3",
    "requests>=2.32.4",
    "starlette>=0.49.1",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tavily-ai/tavily-cookbook"
Documentation = "https://docs.tavily.com"
Repository = "https://github.com/tavily-ai/tavily-cookbook"

[tool.setuptools]
packages = ["tavily_agent_toolkit", "tavily_agent_toolkit.tools", "tavily_agent_toolkit.agents", "tavily_agent_toolkit.utilities"]

[tool.setuptools.package-dir]
tavily_agent_toolkit = "."
"tavily_agent_toolkit.tools" = "tools"
"tavily_agent_toolkit.agents" = "agents"
"tavily_agent_toolkit.utilities" = "utilities"

[tool.setuptools.package-data]
"*" = ["*.md", "*.MD"]
