[project]
name = "tavily-deep-researcher"
version = "0.1.0"
description = "A Python package for interactive research using Tavily's Websearch capabilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "strands-agents>=0.1.3",
    "strands-agents-tools>=0.1.2",
    "tavily-python>=0.7.17",
    # Security: pinned minimum versions for transitive dependencies
    "urllib3>=2.6.3",
    "requests>=2.32.4",
    "mcp>=1.23.0",
]